--- a/style/style.css
+++ b/style/style.css
@@ -1,2 +1,99 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 /* font-family: "Work Sans", serif; */
+*{
+    margin: 0;
+    padding: 0;
+}
+#hero{
+    
+
+
+    background: linear-gradient(0deg, rgb(9, 9, 9) 2.884%,rgba(16, 16, 16, 0) 101.034%),url(/assets/hero-bg.png);
+
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    height: 735px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+#hero .hero-content{
+    width: 818px;
+    height: 312px;
+
+    display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: center;
+
+padding: 0px;
+    
+
+
+}
+.hero-content .subtitle{
+
+
+color: rgb(255, 255, 255);
+font-family: Work Sans;
+font-size: 25px;
+font-weight: 600;
+line-height: 30px;
+letter-spacing: 0%;
+text-align: center;
+opacity: 0.8;
+margin-bottom: 25px;
+
+
+}
+.hero-content .title{
+
+color: rgb(255, 255, 255);
+font-family: Work Sans;
+font-size: 51px;
+font-weight: 700;
+line-height: 64px;
+letter-spacing: 0%;
+text-align: center;
+margin-bottom: 25px;
+
+
+
+
+
+
+
+
+}
+.hero-content .description{
+color: rgb(255, 255, 255);
+font-family: Work Sans;
+font-size: 14px;
+font-weight: 500;
+line-height: 22px;
+letter-spacing: 0%;
+text-align: center;
+opacity: 0.7;
+margin-bottom: 25px;
+
+
+}
+.hero-content .hero-btn{
+    border-radius: 8px;
+
+background: rgb(82, 195, 3);
+color: rgb(255, 255, 255);
+font-family: Work Sans;
+font-size: 16px;
+font-weight: 600;
+line-height: 18px;
+letter-spacing: 0%;
+padding: 16px 25px 16px 25px;
+text-align: center;
+border: none;
+
+}
