--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,10 @@
 }
 #hero{
     
-
+    height: 735px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     background: linear-gradient(0deg, rgb(9, 9, 9) 2.884%,rgba(16, 16, 16, 0) 101.034%),url(/assets/hero-bg.png);
 
@@ -15,10 +18,7 @@
     background-size: cover;
     background-position: center;
 
-    height: 735px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+   
     
 }
 #hero .hero-content{
@@ -202,4 +202,77 @@ padding: 16px 25px 16px 25px;
 margin: 0 auto;
 
 
+}
+
+#footer{
+    
+    
+        background:  rgba(9, 9, 9, 0.10)  url(/assets/social-bg.png) 0 50%;
+    
+    
+
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    
+
+    /* opacity: 0.10; */
+    width: 1056px;
+height: 326px;
+margin: 50px auto;
+}
+.f-content-box .title{
+    color: rgb(16, 16, 16);
+    
+font-family: Work Sans;
+font-size: 38px;
+font-weight: 700;
+line-height: 51px;
+letter-spacing: 0%;
+text-align: center;
+margin-bottom: 15px;
+}
+.f-content-box .des{
+    color: rgb(16, 16, 16);
+font-family: Work Sans;
+font-size: 19px;
+font-weight: 500;
+line-height: 22px;
+letter-spacing: 0%;
+text-align: center;
+opacity: 0.6;
+margin-bottom: 20px;
+}
+.f-btn-box{
+    box-sizing: border-box;
+    border-bottom: 1px solid rgba(16, 16, 16, 0.2);
+    border-top: 1px solid rgba(16, 16, 16, 0.2);
+    text-align: center;
+    margin-bottom: 15px;
+}
+.f-btn-box button{
+    color: rgb(16, 16, 16);
+font-family: Work Sans;
+font-size: 25px;
+font-weight: 600;
+line-height: 30px;
+letter-spacing: 0%;
+text-align: center;
+opacity: 0.7;
+border: none;
+
+
+}
+.contack-box ul{
+display: flex;
+justify-content: center;
+align-items: center;
+list-style: none;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+    margin-left: 15px;
 }
